i implement signup in backend

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,4 @@
 MONGODB_URI=mongodb+srv://varujangrigoryan2017:YA9fof11IVoDJa5k@cluster0.rxj7e.mongodb.net/chat_db?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
+JWT_SECRET=mysecretkey 
+NODE_ENV=development
