--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,6 @@ MONGODB_URI=mongodb+srv://varujangrigoryan2017:YA9fof11IVoDJa5k@cluster0.rxj7e.m
 PORT=5000
 JWT_SECRET=mysecretkey 
 NODE_ENV=development
+CLOUDINARY_CLOUD_NAME=dxxvrs9sw
+CLOUDINARY_API_KEY=741348189322644
+CLOUDINARY_API_SECRET=sVldfn_r-DvWxxwUsgOm2BNvNFE
